[package]
name = "sjvi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "*"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
winit = "0.26.1"
glutin = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.58", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window", "Document"] }
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
glow = "*"